gd_internal_course_tasks/task_ingress/nginx2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
#  annotations: 
#    cloud.google.com/neg: '{"ingress": true}' 
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
#      name: api
#  type: LoadBalancer
